--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ function MontageCard(props) {
     <div style={{ alignSelf: "flex-start", maxWidth: "92%", marginTop: 4, animation: isActive ? "scaleIn 0.35s ease" : "none" }}>
       <div style={{ background: "#fff", borderRadius: "2px 12px 12px 12px", overflow: "hidden", boxShadow: "0 1px 3px rgba(0,0,0,0.1)" }}>
         <video
-          src="/sofia.week1.demo.mp4"
+          src="./sofia.week1.demo.mp4"
           controls
           onPlay={onWatched}
           style={{ width: "100%", height: "auto", borderRadius: 8, background: "#000" }}
